--- a/package.json
+++ b/package.json
@@ -29,7 +29,10 @@
     "@angular/router": "^20.0.0",
     "@tailwindcss/postcss": "^4.1.11",
     "bootstrap": "^5.3.7",
+    "globe.gl": "^2.42.0",
     "rxjs": "~7.8.0",
+    "three": "^0.178.0",
+    "topojson-client": "^3.1.0",
     "tslib": "^2.3.0",
     "zone.js": "~0.15.0"
   },
@@ -38,6 +41,8 @@
     "@angular/cli": "^20.0.4",
     "@angular/compiler-cli": "^20.0.0",
     "@types/jasmine": "~5.1.0",
+    "@types/three": "^0.178.1",
+    "@types/topojson-client": "^3.1.5",
     "autoprefixer": "^10.4.21",
     "jasmine-core": "~5.7.0",
     "karma": "~6.4.0",
