--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "@angular/router": "^20.0.0",
     "@tailwindcss/postcss": "^4.1.11",
     "bootstrap": "^5.3.7",
+    "d3-geo": "^3.1.1",
     "globe.gl": "^2.42.0",
     "rxjs": "~7.8.0",
     "three": "^0.178.0",
@@ -40,6 +41,7 @@
     "@angular/build": "^20.0.4",
     "@angular/cli": "^20.0.4",
     "@angular/compiler-cli": "^20.0.0",
+    "@types/d3-geo": "^3.1.0",
     "@types/jasmine": "~5.1.0",
     "@types/three": "^0.178.1",
     "@types/topojson-client": "^3.1.5",
