--- a/package.json
+++ b/package.json
@@ -27,10 +27,10 @@
     "@angular/forms": "^20.0.0",
     "@angular/platform-browser": "^20.0.0",
     "@angular/router": "^20.0.0",
-    "@tailwindcss/postcss": "^4.1.11",
     "bootstrap": "^5.3.7",
     "d3-geo": "^3.1.1",
     "globe.gl": "^2.42.0",
+    "gsap": "^3.13.0",
     "rxjs": "~7.8.0",
     "three": "^0.178.0",
     "topojson-client": "^3.1.0",
@@ -53,9 +53,9 @@
     "karma-jasmine": "~5.1.0",
     "karma-jasmine-html-reporter": "~2.1.0",
     "postcss": "^8.5.6",
+    "postcss-import": "^16.1.1",
     "prettier": "^3.6.2",
-    "prettier-plugin-tailwindcss": "^0.6.13",
-    "tailwindcss": "^4.1.11",
+    "tailwindcss": "^3.4.17",
     "typescript": "~5.8.2"
   }
 }
