--- a/package.json
+++ b/package.json
@@ -21,10 +21,12 @@
   "private": true,
   "dependencies": {
     "@angular/animations": "^20.0.6",
+    "@angular/cdk": "^20.1.4",
     "@angular/common": "^20.0.0",
     "@angular/compiler": "^20.0.0",
     "@angular/core": "^20.0.0",
     "@angular/forms": "^20.0.0",
+    "@angular/material": "^20.1.4",
     "@angular/platform-browser": "^20.0.0",
     "@angular/router": "^20.0.0",
     "bootstrap": "^5.3.7",
