--- a/package.json
+++ b/package.json
@@ -29,11 +29,13 @@
     "@angular/material": "^20.1.4",
     "@angular/platform-browser": "^20.0.0",
     "@angular/router": "^20.0.0",
+    "@tailwindcss/line-clamp": "^0.4.4",
     "bootstrap": "^5.3.7",
     "d3-geo": "^3.1.1",
     "globe.gl": "^2.42.0",
     "gsap": "^3.13.0",
     "rxjs": "~7.8.0",
+    "tailwind-clip-path": "^1.0.0",
     "three": "^0.178.0",
     "topojson-client": "^3.1.0",
     "tslib": "^2.3.0",
